Color perception basics down

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.VATestActivity" />
+        <activity android:name=".activities.ColorActivity" />
         <activity android:name=".activities.ContrastTestActivity" />
         <activity android:name=".activities.CalibrationActivity" />
     </application>
