A lot has changed for the better

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.CalibrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,7 +22,7 @@
         <activity android:name=".activities.VATestActivity" />
         <activity android:name=".activities.ColorActivity" />
         <activity android:name=".activities.ContrastTestActivity" />
-        <activity android:name=".activities.CalibrationActivity" />
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
