Starting implementation of resultsactivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.ResultsActivity"></activity>
         <activity android:name=".activities.ColorCalibrationActivity" />
         <activity android:name=".activities.CalibrationActivity">
             <intent-filter>
@@ -21,11 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.VATestActivity"
-            android:noHistory="true"/>
-        <activity android:name=".activities.ColorTestActivity"
+        <activity
+            android:name=".activities.VATestActivity"
             android:noHistory="true" />
-        <activity android:name=".activities.ContrastTestActivity"
+        <activity
+            android:name=".activities.ColorTestActivity"
+            android:noHistory="true" />
+        <activity
+            android:name=".activities.ContrastTestActivity"
             android:noHistory="true" />
         <activity android:name=".activities.MainActivity" />
     </application>
